--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black_100">#FF191919</color>
     <color name="black_200">#FF252525</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_transparent">#2F7F7F7F</color>
 </resources>
